fixes search field layout bug and search list layout bug

--- a/src/components/SearchResultList.module.scss
+++ b/src/components/SearchResultList.module.scss
@@ -65,7 +65,9 @@
 
                 .itemImage {
                     width: 80px;
+                    min-width: 80px;
                     height: 80px;
+                    min-height: 80px;
                     overflow: hidden;
                     margin: 0 1rem 0 0;
                     background: $white;
